<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" tools:context=".Login"
        android:background="#a3d9d1"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
    android:id="@+id/layout_content"
    android:gravity="center">

        <LinearLayout
            android:id="@+id/layout_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:src="@drawable/marvin_login" />


        </LinearLayout>

    <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical"
        android:layout_weight="0.01">

        <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" android:maxLines="1"
            android:singleLine="true"
            android:layout_marginBottom="10dp"
            android:textColorHint="#ffffffff"
            android:textColor="#ffffffff" />

        <EditText android:id="@+id/password" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in"
            android:imeOptions="actionUnspecified" android:inputType="textPassword"
            android:maxLines="1" android:singleLine="true"
            android:layout_marginBottom="10dp"
            android:textColorHint="#ffffffff"
            android:textColor="#ffffffff" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Registrarse"
                android:id="@+id/signUpTextView"
                android:autoLink="web"
                android:textColor="#ffffffff"
                android:onClick="registration"
                android:layout_weight="0.4"
                android:gravity="left|center_vertical" />

            <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginTop="10dp" android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textColor="#ffffffff"
                android:background="#ff7e51c2"
                android:onClick="logIn"
                android:layout_gravity="right"
                android:layout_weight="0.8" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/layout_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal" />

            <com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/twitter_login_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Ingresar como Anónimo"
                android:id="@+id/bt_iniciarSesion"
                android:layout_marginTop="5dp"
                android:textColor="#ffffff"
                android:background="#000000" />


        </LinearLayout>
    </LinearLayout>



